--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mantine/core": "^7.9.2",
+    "@mantine/hooks": "^7.9.2",
     "bcrypt": "^5.1.1",
     "mongodb": "^6.6.2",
     "mongoose": "^8.3.5",
